--- a/Reflection/templates/Reflection/journal_list.html
+++ b/Reflection/templates/Reflection/journal_list.html
@@ -14,24 +14,27 @@
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 {% block content %}
-    <div class="flex justify-between items-center  border-b-2 mb-8">
-        <div class=" flex items-center">
-            <h1 class="text-4xl text-gray-800 font-semibold mb-8">My Journals</h1>
+    <div class="flex justify-between items-start  border-b-2 mb-5">
+        <div class=" flex items-start">
+            <h1 class="text-xl text-gray-800 font-semibold mb-4">My Journals</h1>
         </div>
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-3">
             {% if user.is_authenticated %}{{ user.username }}{% endif %}
-            <div class='w-10 h-10 rounded-full bg-gray-500 flex items-center justify-center text-white'>
+            <div class='w-7 h-7 rounded-full bg-gray-500 flex items-center justify-center text-white'>
                 <span class="material-symbols-outlined">account_circle</span>
             </div>
         </div>
     </div>
-    {% for journal in journals %}
-        {% comment %} <li>{{ journal.title }} | {{ journal.created_date }}</li> {% endcomment %}
-        <a href={}>
-            <div class="bg-gray-100/80 px-7  py-5 rounded-lg shadow my-4 hover:shadow-lg hover:cursor-pointer">
-                <p class="text-lg">{{ journal.title }}</p>
-                <p class="text-sm pt-4 text-gray-500">{{ journal.created_date|date:"D d M, Y" }}</p>
+    <div class="grid grid-cols-3 gap-4 ">
+        {% for journal in journals %}
+            <div class="bg-yellow-200/50 p-3 w-full   my- rounded-lg shadow border-2  hover:shadow-md  hover:cursor-pointer">
+                <a href={% url "journal-details" journal.id %}>
+                    <img class='w-full h-[200px] overflow-hidden  rounded-md'
+                         src="{{ journal.image.url }}">
+                    <p class="text-lg mt-3 font-medium text-gray-700">{{ journal.title }}</p>
+                </a>
+                <p class="text-sm py-2 text-gray-500">{{ journal.created_date|date:"D d M, Y" }}</p>
             </div>
-        </a>
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock content %}
