add update and delete features and configure deployment env

--- a/Reflection/templates/Reflection/details.html
+++ b/Reflection/templates/Reflection/details.html
@@ -1,4 +1,8 @@
 {% extends "Reflection/_base.html" %}
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 {% block content %}
     <div>
         <button class="my-2 text-sm bg-gray-700 text-white  py-2  px-4 mb-5 rounded-md">
@@ -7,10 +11,27 @@
         {% comment %} <h1 class="text-xl text-gray-800 font-semibold mb-5">Journals Details</h1> {% endcomment %}
         <hr class='h-2'>
         <div class="w-full  border-2 rounded-lg px-8 py-7 mt-4 bg-yellow-200/60">
-            <p class=" font-bold  text-2xl text-gray-700">{{ journal.title }}</p>
+            <div class="flex justify-between">
+                <div>
+                    <p class=" font-bold  text-2xl text-gray-700">{{ journal.title }}</p>
+                </div>
+                <div class="flex items-start">
+                    <a href="{% url "journal-update" journal.pk %}"
+                       class="bg-blue-400  px-4 py-1 rounded-md mr-2 text-white text-[15px] text-center ">Edit</a>
+                    <form action="{% url "journal-delete" journal.pk %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit"
+                               value="Delete"
+                               class="hover:cursor-pointer bg-red-400 py-1 px-3 rounded-md text-white text-[15px]">
+                    </form>
+                </div>
+            </div>
             <hr class="h-px bg-gray-600/70 border-0 mt-3">
-            <img class='w-full h-[500px] overflow-hidden mt-3 rounded-md'  src="{{ journal.image.url }}">
             <p class=" my-4 leading-8 text-gray-700">{{ journal.notes }}</p>
+            {% if journal.image %}
+                <img class='w-full h-[500px] overflow-hidden mt-3 rounded-md'
+                     src="{{ journal.image.url }}">
+            {% endif %}
             <hr class="h-px bg-gray-600/70 border-0 mt-10">
             <p class="text-purple-500  text-xs mt-4">{{ journal.created_date|date:"D d M, Y" }}</p>
         </div>
