--- a/Reflection/templates/Reflection/_base.html
+++ b/Reflection/templates/Reflection/_base.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="flex-col md:flex-row flex h-screen">
-            <div class="md:h-screen  bg-gray-700 text-white w-full md:w-1/3.5 md:max-w-xs py-2 md:pt-8 md:pb-2 flex flex-col items-center justify-start border-r">
+            <div class="md:h-screen  bg-gray-700 text-white w-full md:w-1/3.5 md:max-w-xs py-1 md:pt-8 md:pb-2 flex flex-col items-center justify-start border-r">
                 <div class=" w-full text-center pb-4 text-2xl flex gap-2 items-center justify-center">
                     <img src="../../../media/reflect.png" class="h-16 w-16">
                     <h1 class="text-3xl font-bold ">Reflection</h1>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="mt-auto w-full text-center flex md:flex-col justify-evenly py-2 px-10 md:pt-0 mb-7">
                     {% comment %} <p class="mb-5">{{ user.username }}</p> {% endcomment %}
-                    <form method="POST" action="{% url 'logout' %}">
+                    <form method="POST" action="{% url 'login' %}">
                         {% csrf_token %}
                         <button class="w-full py-3 bg-purple-400 rounded-xl text-lg hover:bg-purple-400/80  font-semibold"
                                 type="submit">Logout</button>
