--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,15 +1,34 @@
-{% if froms.errors %}<p>You have entered an incorrect passowrd and username</p>{% endif %}
-{% if next %}
-    {% if not user.is_authenticated %}
-        <h1>You have to login to view the full page</h1>
-    {% else %}
-        <h1>Please, Login</h1>
-    {% endif %}
-{% endif %}
-<h1>Login</h1>
-<form {% url "login" %} action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
-    <input type="hidden" name="next" value={{ next }}>
-</form>
+{% load tailwind_filters %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
+    <body>
+        <div class="w-1/3 mx-auto mt-10">
+            {% if froms.errors %}<p>You have entered an incorrect passowrd and username</p>{% endif %}
+            {% if next %}
+                {% if not user.is_authenticated %}
+                    <h1>You have to login to view the full page</h1>
+                {% else %}
+                    <h1>Please, Login</h1>
+                {% endif %}
+            {% endif %}
+            <h1 class="text-center text-gray-700 font-semibold  text-2xl ">Login to Reflection</h1>
+            <form {% url "login" %}
+                  action=""
+                  method="POST"
+                  class="border shadow rounded-md px-10 py-7 mt-7">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit"
+                       value="Login"
+                       class="w-full py-3 bg-purple-400 rounded-xl mt-10  text-white text-lg hover:bg-purple-400/80  font-semibold">
+                <input type="hidden" name="next" value={{ next }}>
+            </form>
+        </div>
+    </body>
+</html>
