--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,6 +1,25 @@
-<h1>Signup</h1>
-<form action="" method="POST" {% url "signup" %}>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Signup">
-</form>
+{% load tailwind_filters %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Signup</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
+    <body>
+        <div class="w-1/3 mx-auto ">
+            <h1 class="font-semibold text-xl text-center text-gray-700 ">Signup</h1>
+            <form action=""
+                  method="POST"
+                  {% url "signup" %}
+                  class="border shadow rounded-md px-10 py-7 mt-5">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit"
+                       value="Signup"
+                       class="w-full py-3 bg-purple-400 rounded-xl mt-10  text-white text-lg hover:bg-purple-400/80  font-semibold">
+            </form>
+        </div>
+    </body>
+</html>
